cleaning up scripts more

--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -361,28 +361,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "26a4fbb6-23b2-49b0-a485-6bc268bc92c0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T20:17:50.058716Z",
-     "iopub.status.busy": "2024-02-29T20:17:50.058368Z",
-     "iopub.status.idle": "2024-02-29T20:17:50.080072Z",
-     "shell.execute_reply": "2024-02-29T20:17:50.079376Z",
-     "shell.execute_reply.started": "2024-02-29T20:17:50.058687Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Generally, we will process these DDFs the same way since they\n",
-    "# are written in mostly the same format\n",
-    "# However, there are a few preprocessing steps necessary for the hazus\n",
-    "# ddfs. Also, there are some differences for NACCS vs. HAZUS\n",
-    "# shallow uncertainty representation"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "f2558d82-b45e-4249-8bd8-c416d0d5ca37",
    "metadata": {
@@ -398,285 +376,7 @@
    "source": [
     "# Read depth damage functions\n",
     "ddf_filedir = join(VULN_DIR_UZ, \"physical\", NATION)\n",
-    "naccs = pd.read_csv(join(ddf_filedir, \"naccs_ddfs.csv\"))\n",
-    "hazus = pd.read_csv(join(ddf_filedir, \"haz_fl_dept.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ec16a6f-2dab-456a-af85-968779cd07cc",
-   "metadata": {},
-   "source": [
-    "### HAZUS DDFs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "01a06109-cc56-4abf-8973-dfd3ebd531fd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T20:17:50.220497Z",
-     "iopub.status.busy": "2024-02-29T20:17:50.220165Z",
-     "iopub.status.idle": "2024-02-29T20:17:50.247638Z",
-     "shell.execute_reply": "2024-02-29T20:17:50.247008Z",
-     "shell.execute_reply.started": "2024-02-29T20:17:50.220470Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# First, preprocessing for hazus ddfs\n",
-    "# For basements, use FIA (MOD.) which does one and two floors by\n",
-    "# A and V zones\n",
-    "# For no basements, use USACE - IWR\n",
-    "# which does one and two floor, no flood zone specified\n",
-    "# 106: FIA (MOD.) 1S WB A zone\n",
-    "# 114: \"\" V zone\n",
-    "# 108: FIA (MOD.) 1S WB A zone\n",
-    "# 116: \"\" V zone\n",
-    "# 129: USACE - IWR 1S NB\n",
-    "# 130: USCAE - IWR 2S+ NB\n",
-    "# For elevating homes, we can use Pile foundation DDFs\n",
-    "# from USACE - Wilmington\n",
-    "# 178 - 1S Pile Foundation\n",
-    "# 183 - 2S Pile Foundation\n",
-    "# These are no basement homes, so to speak\n",
-    "# The USACE New Orleans DDFs have some pier foundation\n",
-    "# DDFs with fresh & salt water and long & short duration\n",
-    "# but this does not appear to apply to out study area\n",
-    "# Subset to DmgFnId in the codes above\n",
-    "dmg_ids = [106, 108, 114, 116, 129, 130, 178, 183]\n",
-    "hazus_res = hazus[(hazus['DmgFnId'].isin(dmg_ids)) & \n",
-    "                  (hazus['Occupancy'] == 'RES1')]\n",
-    "\n",
-    "# Make occtype column in the same form that the NSI has\n",
-    "# e.g. RES1-1SNB\n",
-    "# Add column for A or V zone\n",
-    "# Note: outside SFHA basement homes will take A zone\n",
-    "# What other option do we have? \n",
-    "\n",
-    "# Split Description by comma. \n",
-    "# The split[0] element tells us stories (but description sometimes\n",
-    "# says floors instead of story...)\n",
-    "# Can get around this issue by looking at first word\n",
-    "# The split[1] element\n",
-    "# tells us w/ basement or no basement. Use this to create occtype\n",
-    "desc = hazus_res['Description'].str.split(',')\n",
-    "s_type = desc.str[0].str.split(' ').str[0]\n",
-    "s_type = s_type.str.replace('one', '1').str.replace('two', '2')\n",
-    "b_type = desc.str[1].str.strip()\n",
-    "# Below, we are just trying to get archetypes like\n",
-    "# 1SNB, 2SWB, 1SPL -- for pile foundation\n",
-    "occtype = np.where(b_type == 'w/ basement',\n",
-    "                   s_type + 'SWB',\n",
-    "                   s_type + 'SNB')\n",
-    "occtype = np.where(b_type == 'Pile foundation',\n",
-    "                   s_type + 'SPL',\n",
-    "                   occtype)\n",
-    "# Some of these HAZUS DDFs require us to keep track of the\n",
-    "# flood zone they're in\n",
-    "# I don't think this matters for our case study since\n",
-    "# there are no high wave coastsal zones\n",
-    "# This line is designed to work specifically \n",
-    "# with the way the descriptions\n",
-    "# are written out for the DDFs used in this case study\n",
-    "fz = desc.str[-1].str.lower().str.replace('structure', '').str.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "5f934250-6c91-47fd-9497-13702fd8f776",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T20:17:50.249101Z",
-     "iopub.status.busy": "2024-02-29T20:17:50.248318Z",
-     "iopub.status.idle": "2024-02-29T20:17:50.302953Z",
-     "shell.execute_reply": "2024-02-29T20:17:50.302103Z",
-     "shell.execute_reply.started": "2024-02-29T20:17:50.249072Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Need occtype, flood zone, depth_ft, and rel_dam columns\n",
-    "# Follow steps from naccs processing to get depth_ft and rel_dam\n",
-    "# First, drop unecessary columns\n",
-    "# Don't need Source_Table, Occupy_Class, Cover_Class, empty columns\n",
-    "# Description, Source, DmgFnId, Occupancy and first col (Unnamed: 0)\n",
-    "# because index was written out\n",
-    "# Don't need all na columns either (just for automobiles, apparently)\n",
-    "hazus_res = hazus_res.loc[:,[col for col in hazus_res.columns if 'ft' in col]]\n",
-    "hazus_res = hazus_res.dropna(axis=1, how='all')\n",
-    "# Add the occtype and fld_zone columns\n",
-    "hazus_res = hazus_res.assign(occtype=occtype,\n",
-    "                             fld_zone=fz.str[0])\n",
-    "\n",
-    "# Then, occtype and fld_zone as index and melt rest of columns. \n",
-    "idvars = ['occtype', 'fld_zone']\n",
-    "\n",
-    "# Get a tidy ddf back\n",
-    "hazus_melt = tidy_ddfs(hazus_res, idvars)\n",
-    "\n",
-    "# Delete depth_str and pctdam and standardize\n",
-    "# column names\n",
-    "# Since we just have the building types, call this\n",
-    "# bld_type instead of occtype\n",
-    "dropcols = ['depth_str', 'pct_dam', 'occtype', 'fld_zone']\n",
-    "\n",
-    "# We create an \"id\" col for the ddfs\n",
-    "# Our key for HAZUS is bld_type & fld_zone\n",
-    "ddf_id = np.where(hazus_melt['fld_zone'].notnull(),\n",
-    "                  hazus_melt['occtype'] + '_' + hazus_melt['fld_zone'],\n",
-    "                  hazus_melt['occtype'])\n",
-    "\n",
-    "# Add this to our dataframe so that we can drop bld_type & fld_zone\n",
-    "# Easier to have the flood zone as a capital letter\n",
-    "# It's lower case because of earlier code to do\n",
-    "# some processing\n",
-    "hazus_melt = hazus_melt.assign(ddf_id=pd.Series(ddf_id).str.upper())\n",
-    "# Drop columns\n",
-    "hazus = hazus_melt.drop(columns=dropcols)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "ec57a330-80ee-442f-8a83-a943e6f0b685",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T20:17:50.305225Z",
-     "iopub.status.busy": "2024-02-29T20:17:50.304555Z",
-     "iopub.status.idle": "2024-02-29T20:17:50.426007Z",
-     "shell.execute_reply": "2024-02-29T20:17:50.425110Z",
-     "shell.execute_reply.started": "2024-02-29T20:17:50.305194Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# We need to interpolate between the values of the DDF that we\n",
-    "# are given. Generally speaking, this introduces artificial spread\n",
-    "# in the relative damage distribution since the interpolation is\n",
-    "# actually a combo of measurement & modeling uncertainty that\n",
-    "# the DDF bounds yield. But, linear interpolation between DDF points\n",
-    "# is so common that we will not depart from that before a paper\n",
-    "# makes the rigorous case that the approach is not needed, once\n",
-    "# you use DDFs w/ uncertainty bounds\n",
-    "\n",
-    "# To do this interpolation, we loop through each ddf_id, \n",
-    "# and then we will just sample 10 points and create nan rows\n",
-    "# (besides ddf_id). Then we interpolate, store in a list\n",
-    "# and concat at the end\n",
-    "df_int_list = []\n",
-    "for ddf_id, df in hazus.groupby('ddf_id'):\n",
-    "    # This creates the duplicate rows\n",
-    "    ddf_int = df.loc[np.repeat(df.index, 10)].reset_index(drop=True)\n",
-    "    # Now we have to make them nulls by finding\n",
-    "    # the \"original\" indexed rows\n",
-    "    ddf_int.loc[ddf_int.index % 10 != 0, ['depth_ft', 'rel_dam']] = np.nan\n",
-    "    # Now we interpolate\n",
-    "    ddf_int = ddf_int.interpolate()\n",
-    "    # Drop duplicate rows (this happens for the max depth values)\n",
-    "    ddf_int = ddf_int.drop_duplicates()\n",
-    "    # And append\n",
-    "    df_int_list.append(ddf_int)\n",
-    "hazus_ddfs = pd.concat(df_int_list, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "78001c46-8d0f-4836-86c1-3d1d74e22da3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T20:17:50.427044Z",
-     "iopub.status.busy": "2024-02-29T20:17:50.426817Z",
-     "iopub.status.idle": "2024-02-29T20:17:50.468241Z",
-     "shell.execute_reply": "2024-02-29T20:17:50.467489Z",
-     "shell.execute_reply.started": "2024-02-29T20:17:50.427022Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Now we're going to process this tidy dataframe into a dictionary\n",
-    "# for easier ensemble generation\n",
-    "\n",
-    "# After we get this new column, we are going to create two\n",
-    "# new columns based on the +/- .3*pt_estimate (30% uncertainty) \n",
-    "# assumption from Maggie's paper \n",
-    "# (https://www.nature.com/articles/s41467-020-19188-9)\n",
-    "# We will take the ddf_id, depth_ft, and these two columns\n",
-    "# to do the same thing as before for the dict of dicts\n",
-    "# We need to use max(0, ) and min(1, ) to make sure the +/- .3\n",
-    "# doesn't lead to negative losses, greater than 100% losses\n",
-    "# Since Maggie's paper, though, there have been studies\n",
-    "# suggesting that the damage distribution at each depth\n",
-    "# follows more of a long upper tailed Beta distribution. \n",
-    "# But we don't have parameters for this\n",
-    "# A key assumption is that\n",
-    "# we can round depths to the nearest value in the\n",
-    "# dictionary to estimate their loss. There is no guidance in the\n",
-    "# use of DDFs about interpolating between values given on the DDF\n",
-    "# NFIP assessed damages data (recently released with the new v2 of\n",
-    "# the NFIP claims) only provides depth in feet, rounded to the\n",
-    "# nearest foot. So, any uncertainty surrounding the depth-damage\n",
-    "# relationship for any foot should include some component of \n",
-    "# measurement error in representing some non rounded depth value\n",
-    "# to the rounded value and estimating a relationship\n",
-    "# To implement this, we will round all depths to the nearest foot\n",
-    "# before we check for whether they are inside the bounds for\n",
-    "# estimating losses with a particular depth-damage function\n",
-    "# Because of this, rounding the parameters to the nearest\n",
-    "# hundredth is a much lower order concern\n",
-    "dam_low = np.maximum(0,\n",
-    "                     hazus_ddfs['rel_dam'] - .3*hazus_ddfs['rel_dam']).round(2)\n",
-    "dam_high = np.minimum(1,\n",
-    "                      hazus_ddfs['rel_dam'] + .3*hazus_ddfs['rel_dam']).round(2)\n",
-    "\n",
-    "# Add these columns into our dataframe\n",
-    "hazus_ddfs = hazus_ddfs.assign(low=dam_low,\n",
-    "                               high=dam_high)\n",
-    "\n",
-    "# For reasons that will become more obvious later,\n",
-    "# it is really helpful to store our params as a list\n",
-    "# Get param cols\n",
-    "uni_params = ['low', 'high']\n",
-    "\n",
-    "# Get df of ddf_id, depth_ft, rel_dam\n",
-    "hazus_f = hazus_ddfs[['ddf_id', 'depth_ft', 'rel_dam']]\n",
-    "# Now store params as a list\n",
-    "hazus_f = hazus_f.assign(params=hazus_ddfs[uni_params].values.tolist())\n",
-    "\n",
-    "# We are going to write out hazus_f \n",
-    "# In generating the ensemble for losses\n",
-    "# we are going to merge this dataframe\n",
-    "# with our structure ensemble - merged with\n",
-    "# depths. So, on haz_depth & depth_ft from hazus_f\n",
-    "# plus the structure archetype, we can get\n",
-    "# the rel_dam parameters. We will draw from this\n",
-    "# and get the rel_dam realization for this\n",
-    "# state of the world\n",
-    "# But, he way this data is stored requires a few assumptions\n",
-    "# about loss estimation\n",
-    "# First, any depths below that lowest depth have 0 loss\n",
-    "# Second, any depths above the highest depth have the same\n",
-    "# loss as the highest depth \n",
-    "# To implement this, we will check depths (after drawing from their\n",
-    "# distribution at each location) for whether they are inside\n",
-    "# the range of the particular DDF which can be defined with \n",
-    "# conastants. If below, loss is 0. If above, swap with\n",
-    "# the upper bound\n",
-    "# This is why it's very helpful to have the params stored as \n",
-    "# a list, because now we can get unique key/value pairs\n",
-    "# for the ddf_id and the params\n",
-    "# We need two dicts for HAZUS\n",
-    "# One is with the params list\n",
-    "# One is just ddf_id to rel_dam (for benchmark loss calculations\n",
-    "# when uncertainty is not considered)\n",
-    "\n",
-    "# We can call our helper function to get our dictionaries\n",
-    "HAZUS_MAX_DICT = ddf_max_depth_dict(hazus_f.reset_index(drop=True),\n",
-    "                                    'params')\n",
-    "HAZUS_MAX_NOUNC_DICT = ddf_max_depth_dict(hazus, 'rel_dam')\n"
+    "naccs = pd.read_csv(join(ddf_filedir, \"naccs_ddfs.csv\"))"
    ]
   },
   {
@@ -685,28 +385,6 @@
    "metadata": {},
    "source": [
     "### NACCS DDFs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "33aca7c2-b81d-48b0-ba0a-a2ba3391c913",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T20:17:52.355505Z",
-     "iopub.status.busy": "2024-02-29T20:17:52.355204Z",
-     "iopub.status.idle": "2024-02-29T20:17:52.377863Z",
-     "shell.execute_reply": "2024-02-29T20:17:52.377195Z",
-     "shell.execute_reply.started": "2024-02-29T20:17:52.355480Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# For NACCS, we have the RES 1 DDFs\n",
-    "# For elevation, we have RES-OPEN and RES-ENC\n",
-    "# These are very similar in terms of damages so\n",
-    "# only need to retain RES-OPEN for simplicity for\n",
-    "# our current case study"
    ]
   },
   {
@@ -724,13 +402,13 @@
    },
    "outputs": [],
    "source": [
-    "# NACCS need some preprocessing as well\n",
+    "# For NACCS, we have the RES 1 DDFs\n",
     "# First, subset to the relevant Occupancy types\n",
     "# We want to end up with ddf ids 1swb, open, etc.\n",
     "# don't need to keep the RES1- part for this case study\n",
     "naccs['res_type'] = naccs['Occupancy'].str.split('-').str[0]\n",
     "naccs['bld_type'] = naccs['Occupancy'].str.split('-').str[1]\n",
-    "occ_types = ['1SWB', '2SWB', '1SNB', '2SNB', 'OPEN']\n",
+    "occ_types = ['1SWB', '2SWB', '1SNB', '2SNB']\n",
     "naccs_res = naccs.loc[(naccs['bld_type'].isin(occ_types)) &\n",
     "                      ((naccs['res_type'] == 'RES1') |\n",
     "                       (naccs['res_type'] == 'RES'))]\n",
@@ -825,50 +503,25 @@
    },
    "outputs": [],
    "source": [
-    "# We need one hazus file with params for \n",
-    "# uncertainty and one w/ just rel_dam\n",
-    "hazus_unc = hazus_f[['ddf_id', 'depth_ft', 'params']]\n",
-    "hazus_nounc = hazus_f[['ddf_id', 'depth_ft', 'rel_dam']]\n",
-    "\n",
     "# Main directory\n",
     "ddf_out_dir = join(VULN_DIR_I, 'physical')\n",
     "# Main ddf files\n",
-    "hazus_out_filep = join(ddf_out_dir, 'hazus_ddfs.pqt')\n",
-    "hazus_nounc_out_filep = join(ddf_out_dir, 'hazus_ddfs_nounc.pqt')\n",
     "naccs_out_filep = join(ddf_out_dir, 'naccs_ddfs.pqt')\n",
     "# Dictionaries - save as .json for simplicity\n",
     "naccs_max_filep = join(ddf_out_dir, 'naccs.json')\n",
-    "hazus_max_filep = join(ddf_out_dir, 'hazus.json')\n",
-    "hazus_max_nounc_filep = join(ddf_out_dir, 'hazus_nounc.json')\n",
     "\n",
     "# Only need to call this for one of the files\n",
     "# since they share the same parent directory\n",
-    "prepare_saving(hazus_out_filep)\n",
+    "prepare_saving(naccs_out_filep)\n",
     "\n",
     "# Save as parquet files since\n",
     "# these will directly read in the\n",
     "# DDF params as a list, not as a string\n",
-    "hazus_unc.to_parquet(hazus_out_filep)\n",
-    "hazus_nounc.to_parquet(hazus_nounc_out_filep)\n",
     "naccs_out.to_parquet(naccs_out_filep)\n",
     "\n",
     "# Save the json files\n",
     "with open(naccs_max_filep, 'w') as fp:\n",
-    "    json.dump(NACCS_MAX_DICT, fp)\n",
-    "\n",
-    "with open(hazus_max_filep, 'w') as fp:\n",
-    "    json.dump(HAZUS_MAX_DICT, fp)\n",
-    "\n",
-    "with open(hazus_max_nounc_filep, 'w') as fp:\n",
-    "    json.dump(HAZUS_MAX_NOUNC_DICT, fp)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f29922b9-012b-4969-a04d-3738e7c5b567",
-   "metadata": {},
-   "source": [
-    "## Proccess NFHL"
+    "    json.dump(NACCS_MAX_DICT, fp)"
    ]
   },
   {
@@ -1298,14 +951,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5d2018d7-a6db-4a2d-a2df-a57581e1d2c9",
-   "metadata": {},
-   "source": [
-    "## Link NSI with Flood Zones"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "044aa2f8-8802-4cb0-be12-8b7baf88e750",
@@ -1581,14 +1226,6 @@
     "sovi_df_f = pd.concat(sovi_df_list, axis=1).fillna(False)\n",
     "sovi_out_filepath = join(sovi_dir, 'c_indicators.pqt')\n",
     "sovi_df_f.to_parquet(sovi_out_filepath)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97d62aff-0687-481e-8442-0b520c43f0a6",
-   "metadata": {},
-   "source": [
-    "# Assess base flood elevations and ground elevations "
    ]
   },
   {
