scripts and notebooks are matched up for the first paper

--- a/workflow/notebooks/ensemble.ipynb
+++ b/workflow/notebooks/ensemble.ipynb
@@ -708,9 +708,9 @@
    "outputs": [],
    "source": [
     "# Write out our ensemble df\n",
-    "ens_out_filep = join(FO, 'ensemble.pqt')\n",
+    "ens_out_filep = join(FO, 'ensemble_Mid.pqt')\n",
     "prepare_saving(ens_out_filep)\n",
-    "ens_dfs['Mid'].to_parquet(join(FO, 'ensemble.pqt'))"
+    "ens_dfs['Mid'].to_parquet(join(FO, 'ensemble_Mid.pqt'))"
    ]
   }
  ],
