--- a/workflow/notebooks/optimal_elev.ipynb
+++ b/workflow/notebooks/optimal_elev.ipynb
@@ -69,12 +69,13 @@
     "NATION = 'US'\n",
     "\n",
     "# I think it also could make sense to pass in scenario and\n",
-    "# ddf type as arguments. For main results\n",
-    "# we're using 'mid' and 'naccs' but for generating\n",
-    "# our sensitivity analysis results we will need to pass\n",
-    "# in the other scenarios and 'hazus'\n",
-    "scenarios = ['Upper']#['Lower', 'Mid', 'Upper']\n",
-    "ddf_types = ['naccs', 'hazus']"
+    "# ddf type as arguments. For this study\n",
+    "# we're using 'mid' and 'naccs' but in future papers\n",
+    "# we want to think about deep uncertainty, so\n",
+    "# trying to code this up in a way that accommodates \n",
+    "# that type of future inquiry\n",
+    "scenarios = ['Mid']\n",
+    "ddf_types = ['naccs']"
    ]
   },
   {
@@ -96,40 +97,6 @@
     "# per house across an ensemble\n",
     "# Optimal elevation height for each house is returned based on\n",
     "# the ensemble generated in benchmark_ensemble"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f3319852-a49d-47d9-9d18-a95c8768c53f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:48.112303Z",
-     "iopub.status.busy": "2024-02-29T23:11:48.111833Z",
-     "iopub.status.idle": "2024-02-29T23:11:48.180489Z",
-     "shell.execute_reply": "2024-02-29T23:11:48.178776Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:48.112253Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# The gist of this is to evaluate costs & benefits for each increment\n",
-    "# of elevation from 3 to 10 feet \n",
-    "# There are values for costs from the FEMA report \n",
-    "# that go in the config file\n",
-    "# This gets multipled by sq ft of the building\n",
-    "# There is uncertainty in the inflation costs (relative to 2009 when\n",
-    "# the report was published) and the fixed costs (CLARA and\n",
-    "# NACCS reports provide us with a range)\n",
-    "# All of these values are in the config.yaml, and \n",
-    "# the data for these estimates is in the resources/\n",
-    "# directory of the project repository\n",
-    "# For benefits, we'll do it \"through\" the DDF by moving along the\n",
-    "# x-axis of the DDF. We do this by changing the FFE, which we are\n",
-    "# treating under uncertainty. We are not treating the elevation\n",
-    "# as an uncertain amount for this case study. We need\n",
-    "# to estimate the losses with the new first-floor elevation adjusted\n",
-    "# height under uncertainty"
    ]
   },
   {
@@ -178,8 +145,8 @@
     "# elevation cost estimation\n",
     "# We need bldgtype for elevation cost estimation, too\n",
     "sub_cols = ['fd_id', 'found_type', 'sqft', 'bldgtype',\n",
-    "            'bld_types', 'hazus_types', 'naccs_eal',\n",
-    "            'hazus_eal', 'val_s', 'sow_ind']\n",
+    "            'bld_types', 'naccs_eal',\n",
+    "            'val_s', 'sow_ind']\n",
     "# We need to add depth_ffe_* columns \n",
     "depth_ffe_cols = ['depth_ffe_' + x for x in RET_PERS]\n",
     "sub_cols = sub_cols + depth_ffe_cols\n",
@@ -192,33 +159,13 @@
     "    ens_filep = join(FO, 'ensemble_' + scen + '.pqt')\n",
     "    ens_df = pd.read_parquet(ens_filep, columns=sub_cols)\n",
     "    print('Load data: ' + scen)\n",
-    "    ens_dfs[scen] = ens_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "372f66d7-aef5-4dd2-945a-13f7f33037e9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:51.747601Z",
-     "iopub.status.busy": "2024-02-29T23:11:51.746689Z",
-     "iopub.status.idle": "2024-02-29T23:11:51.850760Z",
-     "shell.execute_reply": "2024-02-29T23:11:51.849732Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:51.747552Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "    ens_dfs[scen] = ens_df\n",
+    "\n",
     "# We'll need DDFs for estimating benefits\n",
     "# Load DDFs\n",
     "naccs_ddfs = pd.read_parquet(join(VULN_DIR_I, 'physical', 'naccs_ddfs.pqt'))\n",
-    "hazus_ddfs = pd.read_parquet(join(VULN_DIR_I, 'physical', 'hazus_ddfs.pqt'))\n",
     "\n",
     "# Load helper dictionaries\n",
-    "with open(join(VULN_DIR_I, 'physical', 'hazus.json'), 'r') as fp:\n",
-    "    HAZUS_MAX_DICT = json.load(fp)\n",
-    "\n",
     "with open(join(VULN_DIR_I, 'physical', 'naccs.json'), 'r') as fp:\n",
     "    NACCS_MAX_DICT = json.load(fp)"
    ]
@@ -273,26 +220,6 @@
     "# In numpy, you generate draws from a 1 parameter Weibull\n",
     "# using the shape parameter, and multiply these draws from\n",
     "# the scale parameter\n",
-    "# It's likely that house lifetime distributions are different for\n",
-    "# elevated and non-elevated properties exposed to flooding, but\n",
-    "# we don't have this information. While the method can be improved,\n",
-    "# Maggie's paper demonstrates the importance of accounting for\n",
-    "# house lifetime uncertainty in estimating project benefits. In\n",
-    "# particular, when discount rates in the future are low and project\n",
-    "# lifetimes are long, the net benefits will be higher than\n",
-    "# under the standard procedure (moderate discount rate and\n",
-    "# 30 year lifetime). The standard procedure -- which also requires\n",
-    "# that the project BCR > 1 -- will tend to under-prefer\n",
-    "# investment in lower valued structures which need a longer time\n",
-    "# to exceed the BCR > 1 threshold. So again, while future work\n",
-    "# should improve on this, accounting for house lifetime uncertainty\n",
-    "# matters when you're dealing with a BCR > 1 rule, as we are. \n",
-    "# Since this is about the interaction with the discount rate, and\n",
-    "# we don't have the ability to associate the parameters with\n",
-    "# housing characteristics, I will use the same draws for each house\n",
-    "# and interpret this as uncertainty in the house lifetime parameter\n",
-    "# whose benchmark value is 30. \n",
-    "\n",
     "rng = np.random.default_rng()\n",
     "lifetime = rng.weibull(W_SHAPE, N_SOW)*W_SCALE"
    ]
@@ -425,14 +352,7 @@
     "# Write out the elevation cost ensemble\n",
     "elev_ens_filep = join(EXP_DIR_I, FIPS, 'elev_ens.pqt')\n",
     "prepare_saving(elev_ens_filep)\n",
-    "e_c_ens.to_parquet(elev_ens_filep)\n",
-    "\n",
-    "# We will also do the cost_sqft_unc*sqft + cost_fix_unc, indexed\n",
-    "# on sow_ind for each structure across SOWs, but will only write out\n",
-    "# the costs associated with the optimal elevation\n",
-    "# Since the elevation cost ensemble is written out, it's always\n",
-    "# accessible to inspect elevation costs for any \n",
-    "# eligible heightening for homes in/across SOWs"
+    "e_c_ens.to_parquet(elev_ens_filep)"
    ]
   },
   {
@@ -441,42 +361,6 @@
    "metadata": {},
    "source": [
     "# Optimal Elevation Under Uncertainty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0cfa6f43-0d17-4881-9d4f-81f58d0f92a5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T23:11:53.421600Z",
-     "iopub.status.busy": "2024-02-29T23:11:53.421377Z",
-     "iopub.status.idle": "2024-02-29T23:11:53.434037Z",
-     "shell.execute_reply": "2024-02-29T23:11:53.433529Z",
-     "shell.execute_reply.started": "2024-02-29T23:11:53.421585Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# To do this, we loop through each of the possible heightenings\n",
-    "# This effectively creates a new first floor elevation for each home\n",
-    "# and then we repeat the loss estimation from benchmark_ensemble\n",
-    "# for each structure\n",
-    "# In addition to this, we estimate the costs for each heightening\n",
-    "# This is done on a state of the world basis since it's informed\n",
-    "# by macroeconomic conditions. What this means is we generate\n",
-    "# a N_SOW length vector of the inflation value & the fixed cost\n",
-    "# value that is used for the elevation cost. The per sq. ft. costs\n",
-    "# are not changing across SOWs\n",
-    "# It seems like because DDFs are monotonic increasing with depth\n",
-    "# and costs are monotonic increasing with heightening (due to\n",
-    "# linear interpolation), you could use an approach like binary\n",
-    "# sort on the heightening possibilities to save some search time\n",
-    "# but it won't take that long to loop through the 8 possible\n",
-    "# heightenings we're considering. Because the cost data is less than\n",
-    "# ideal, I don't want to introduce an approach like binary sort that\n",
-    "# works only on the cost data we have (in reality, cost estimates\n",
-    "# may not be well suited to this approach)"
    ]
   },
   {
@@ -659,6 +543,13 @@
     }
    ],
    "source": [
+    "# We will also do the cost_sqft_unc*sqft + cost_fix_unc, indexed\n",
+    "# on sow_ind for each structure across SOWs, but will only write out\n",
+    "# the costs associated with the optimal elevation\n",
+    "# Since the elevation cost ensemble is written out, it's always\n",
+    "# accessible to inspect elevation costs for any \n",
+    "# eligible heightening for homes in/across SOWs\n",
+    "\n",
     "# Loop through possible heightenings of 3 through 10 feet, inclusive\n",
     "# For each of these, add that value to each column in depth_ffe_*\n",
     "# Then, go through the procedures from benchmark_ensemble\n",
@@ -737,7 +628,7 @@
     "    for ddf_type in ddf_types:\n",
     "        print('DDF: ' + ddf_type)\n",
     "        eal_col = ddf_type + '_eal'\n",
-    "        \n",
+    "\n",
     "        # List for series of mean bcr at each heightening\n",
     "        h_list = []\n",
     "        \n",
@@ -766,10 +657,8 @@
     "                                                     naccs_ddfs,\n",
     "                                                     NACCS_MAX_DICT)\n",
     "                else:\n",
-    "                    elev_losses[rp] = est_hazus_loss(ens_df['hazus_types'],\n",
-    "                                                     depth_ffe_df[rp],\n",
-    "                                                     hazus_ddfs,\n",
-    "                                                     HAZUS_MAX_DICT)\n",
+    "                    # Placeholder for now\n",
+    "                    print('Placeholder for other DDFs')\n",
     "            \n",
     "                print('Estimate Losses for Elevated Home, RP: ' + rp)\n",
     "            \n",
